#386 Fixed visibility of third line

--- a/laterpay/assets/stylus/widgets/dynamic_pricing.styl
+++ b/laterpay/assets/stylus/widgets/dynamic_pricing.styl
@@ -67,8 +67,8 @@ rect.lp_dynamic-pricing-widget-background
     stroke                  hsl(0, 0%, 100%)
     stroke-width            8px
 
-    .lp_is_hidden
-        display             none
+.line-price.lp_is_hidden
+    display             none
 
 .line-price-visible
     stroke                  hsl(0, 0%, 33%)
